# lengxiaobei

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  SKILL.md  config.json  daemon.py  docker-compose.yml  evolution_history.json  evolution_runs.jsonl  install.sh  kairos_events.jsonl  legacy_start_rust.sh  lx_web.py  lx_web.py.bak-20260522-033506  package-lock.json  package.json  pyproject.toml  requirements.txt  start.sh  start_fixed.sh
.claude/: scheduled_tasks.json
assessment/: abilities.json  assessments.json
backend/: __init__.py  config.py  main.py
buddy/: buddy_data.json
config/: config.json  config_history.json  default.yaml  development.yaml  production.yaml
control_layer/: Cargo.toml  LEGACY.md  agent_state.json
control_layer/src/: main.rs
data/: README.md  local_agents.example.json  memory.db
deploy/: com.lengxiaobei.daemon.plist  prometheus.yml
docs/: AGENTS.md  ARCHITECTURE.md  AUTONOMOUS_AGENT_OPTIMIZATION.md  AUTONOMOUS_AGENT_REDESIGN.md  AUTONOMY.md  COMPREHENSIVE_ANALYSIS.md  CONSTITUTION.md  DESIGN.md  DESIGN_ROADMAP.md  DIRECTORY_RULES.md  FIXES.md  FIX_REPORT.md  FIX_SUMMARY.md  IDENTITY.md  LEARN.md  MEMORY.md  OPTIMIZATION_PLAN.md  OPTIMIZATION_SUMMARY.md  README.md  REORGANIZE_PLAN.md  SELF_EVOLUTION_MVP.md  SKILL.md  SOUL.md  USER.md  learned.md  openapi.yaml
frontend/: index.html  package-lock.json  package.json
goals/: goals.json
lx-desktop/: main.js  package.json  preload.js
lx_web/: app.py  autonomy.py  utils.py
memory/: .kairos_state.json  .last_dream  2026-04-03-gateway-duplicate-launchd-fix.md  2026-04-03-workspace-cleanup.md  2026-04-05-claude-openclaw.md  2026-04-05.md  2026-04-08-0825.md  2026-04-08-0826.md  2026-04-08-constitution.md  2026-04-08.md  MEMORY.md  agent_lessons.json  autonomy_learning_plan.json  autonomy_runs.json  code_change_logs.json  critic_history.json  daemon_state.json  dream_index.json  dream_report_20260409.md  dream_session_20260409.json  evolution_history.json  fixes_done.md  memory.db-shm  memory.db-wal  problems_to_fix.md  reflection_log.jsonl  self_evolution_runs.json
memory_layer/: Cargo.toml  LEGACY.md  memories.json
motivation/: motivations.json  rewards.json
permissions/: permission_requests.json  signature_2170c8ce9a3a8de39836f182c3faa742dda26472eae21770b75d9121170a6c7f.json  signature_a9debe51e2522bf98d7c40d65b77a93445946c4eaeb6ac2c0a87495c5e01ffcc.json  signature_c76ab7a847d36eb9c30aac6f02a072f7c9508ea00e2c7c3514d5317efae0d46f.json
prompts/: BUDDY.md  CRITIC.md  KAIROS.md  TEAM.md
scripts/: check_project_layout.py  lx_self_evolve.py  quick_approve.py  record_development.py  reset_circuit_breaker.py  run_evolution.py  security_scan.py  setup_dev.sh  start_backend.sh  sync_all_services.py
src/: __init__.py  __main__.py  active_learner.py  agent_learning.py  auto_dream.py  autonomy.py  bridge.py  buddy.py  budget.py  circuit_breaker.py  cli.py  code_change_log.py  config.py  config_enhanced.py  constitution.py  core.py  critic.py  db_pool.py  debug.py  dev_team.py  distributed_lock.py  doctor.py  enums.py  evolution_permission.py  executor.py  facade_evolution.py  facade_guardian.py  facade_memory.py  facade_reasoning.py  forked_agent.py  goal_system.py  hard_boundary.py  health_check.py  hooks.py  (+44 more)
(+255 files in other folders)
