[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lengxiaobei"
version = "2.1.0"
description = "冷小北 — 数字生命体 · 自演化 AI Agent"
readme = "docs/README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "潘豪", email = "panhao@example.com"}]
keywords = ["ai-agent", "autonomous", "self-evolution", "digital-life"]

dependencies = [
    "pyyaml>=6.0",
    "httpx>=0.25",
    "requests>=2.31",
    "psutil>=5.9",
    "flask>=2.0",
]

[project.optional-dependencies]
full = [
    "sentence-transformers>=2.0",
    "numpy>=1.24",
    "faiss-cpu>=1.7",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.scripts]
lx = "src.cli:main"

[project.urls]
Homepage = "https://github.com/lengxiaobei/lengxiaobei"
Repository = "https://github.com/lengxiaobei/lengxiaobei.git"

[tool.setuptools]
packages = ["src", "src.evolution", "src.kairos", "src.mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-q --tb=short"

[tool.ruff]
select = ["E9", "F63", "F7", "F82"]
line-length = 100

[tool.mypy]
ignore_missing_imports = true
follow_imports = "skip"