[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lengxiaobei"
version = "3.0.0"
description = "LengXiaobei / YourAgent — local-first self-evolving multi-channel AI agent"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "panhao", email = "panhao@example.com"}]
keywords = ["ai-agent", "autonomous", "self-evolution", "local-first", "youragent"]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.25",
    "pyyaml>=6.0",
    "sqlite-utils>=3.36",
]

[project.optional-dependencies]
full = [
    "sentence-transformers>=2.0",
    "numpy>=1.24",
    "faiss-cpu>=1.7",
    "chromadb>=0.5.0",
    "playwright>=1.40.0",
    "apscheduler>=3.10.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.scripts]
lengxiaobei = "backend.main:app"

[project.urls]
Homepage = "https://github.com/lengxiaobei/lengxiaobei"
Repository = "https://github.com/lengxiaobei/lengxiaobei.git"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-q --tb=short"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]

[tool.mypy]
ignore_missing_imports = true
follow_imports = "skip"
