[package]
name = "control_layer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.3"
log = "0.4"
simple_logger = "4.3"
sysinfo = "0.30.0"
reqwest = { version = "0.11", features = ["json"] }
